Transfered the location and directions buttons to Viewrestaurant Activity
Transfered the location and directions buttons to Viewrestaurant Activity (also, the share via twitter doesn't seem to function anymore. Not sure why)

--- a/app/src/main/res/layout/activity_restaurant_view.xml
+++ b/app/src/main/res/layout/activity_restaurant_view.xml
@@ -10,11 +10,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="51dp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginRight="51dp"
         android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
         android:layout_marginTop="3dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
         android:text="Restaurant Details"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#340c84"
@@ -26,12 +26,12 @@
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginRight="238dp"
         android:layout_marginStart="88dp"
+        android:layout_marginLeft="88dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginRight="238dp"
+        android:layout_marginBottom="11dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewAddress"
@@ -43,12 +43,12 @@
         android:id="@+id/textViewAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginRight="238dp"
         android:layout_marginStart="88dp"
+        android:layout_marginLeft="88dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginRight="238dp"
+        android:layout_marginBottom="9dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewPhone"
@@ -60,12 +60,12 @@
         android:id="@+id/textViewPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginRight="238dp"
         android:layout_marginStart="88dp"
+        android:layout_marginLeft="88dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginRight="238dp"
+        android:layout_marginBottom="8dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
@@ -77,11 +77,11 @@
         android:id="@+id/textViewDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginRight="238dp"
         android:layout_marginStart="88dp"
+        android:layout_marginLeft="88dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginRight="238dp"
+        android:layout_marginBottom="2dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewTags"
@@ -93,11 +93,11 @@
         android:id="@+id/textViewTags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginRight="238dp"
         android:layout_marginStart="88dp"
+        android:layout_marginLeft="88dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginRight="238dp"
+        android:layout_marginBottom="5dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewRatingValue"
@@ -109,12 +109,12 @@
         android:id="@+id/textViewRatingValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginRight="238dp"
         android:layout_marginStart="88dp"
+        android:layout_marginLeft="88dp"
         android:layout_marginTop="3dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginRight="238dp"
+        android:layout_marginBottom="80dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/ratingBarView"
@@ -126,11 +126,11 @@
         android:id="@+id/ratingBarView"
         android:layout_width="wrap_content"
         android:layout_height="56dp"
-        android:layout_marginEnd="96dp"
-        android:layout_marginLeft="96dp"
-        android:layout_marginRight="96dp"
         android:layout_marginStart="96dp"
+        android:layout_marginLeft="96dp"
         android:layout_marginTop="77dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginRight="96dp"
         android:layout_weight="1"
         android:numStars="5"
         android:rating="2.0"
@@ -151,26 +151,64 @@
 
     <Button
         android:id="@+id/btnShareTwitter"
-        android:layout_width="106dp"
+        android:layout_width="113dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Twitter"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="440dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnShareEmail" />
 
     <Button
         android:id="@+id/btnShareFacebook"
-        android:layout_width="106dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Facebook"
-        tools:layout_editor_absoluteY="613dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnShareTwitter" />
 
     <Button
         android:id="@+id/btnShareEmail"
-        android:layout_width="106dp"
+        android:layout_width="114dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Email"
-        tools:layout_editor_absoluteX="272dp"
-        tools:layout_editor_absoluteY="613dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnRVALocation"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Location"
+        app:layout_constraintBottom_toTopOf="@+id/btnShareEmail"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnRVADirections"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Directions"
+        app:layout_constraintBottom_toTopOf="@+id/btnShareFacebook"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnRVALocation" />
 
 
 </android.support.constraint.ConstraintLayout>
