--- a/app/src/main/res/layout/activity_update_restaurant.xml
+++ b/app/src/main/res/layout/activity_update_restaurant.xml
@@ -10,10 +10,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginLeft="51dp"
-        android:layout_marginRight="50dp"
         android:layout_marginStart="51dp"
+        android:layout_marginLeft="51dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
         android:text="Update Restaurant"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#340c84"
@@ -25,11 +25,11 @@
         android:id="@+id/editTextName"
         android:layout_width="299dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="42dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginRight="42dp"
         android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
         android:ems="10"
         android:hint="name "
         android:inputType="textPersonName"
@@ -42,11 +42,11 @@
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
         android:layout_width="299dp"
         android:layout_height="25dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginRight="42dp"
         android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
@@ -55,11 +55,11 @@
         android:id="@+id/editTextAddress"
         android:layout_width="299dp"
         android:layout_height="51dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="11dp"
         android:layout_marginStart="7dp"
+        android:layout_marginLeft="7dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginRight="11dp"
         android:ems="10"
         android:hint="address"
         android:inputType="textPostalAddress"
@@ -72,11 +72,11 @@
         android:id="@+id/editTextPhone"
         android:layout_width="299dp"
         android:layout_height="51dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginRight="42dp"
         android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
         android:ems="10"
         android:hint="phone"
         android:inputType="phone"
@@ -88,11 +88,11 @@
         android:id="@+id/editTextDescription"
         android:layout_width="299dp"
         android:layout_height="51dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="7dp"
+        android:layout_marginLeft="7dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="description "
         android:inputType="textMultiLine"
@@ -105,11 +105,11 @@
         android:id="@+id/editTextTags"
         android:layout_width="299dp"
         android:layout_height="51dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginRight="42dp"
         android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
         android:ems="10"
         android:hint="tags"
         android:inputType="textPersonName"
@@ -121,11 +121,11 @@
         android:id="@+id/txtRatingValue"
         android:layout_width="37dp"
         android:layout_height="41dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall"
         app:layout_constraintEnd_toStartOf="@+id/ratingBar"
@@ -145,48 +145,43 @@
 
     <Button
         android:id="@+id/btnSaveRestaurant"
-        android:layout_width="wrap_content"
+        android:layout_width="182dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Save"
-        app:layout_constraintEnd_toStartOf="@+id/btnLocationRestaurant"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnDeleteRestaurant"
-        android:layout_width="83dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Delete"
-        app:layout_constraintTop_toBottomOf="@+id/btnSaveRestaurant"
-        tools:layout_editor_absoluteX="151dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnSaveRestaurant" />
 
     <Button
         android:id="@+id/btnLocationRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+        tools:layout_editor_absoluteX="266dp"
+        tools:layout_editor_absoluteY="466dp" />
 
     <Button
         android:id="@+id/btnDirectionRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:layout_marginEnd="96dp"
-        android:layout_marginRight="96dp"
-        android:layout_marginTop="16dp"
         android:text="Directions"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSaveRestaurant"
-        app:layout_constraintVertical_bias="0.81" />
+        tools:layout_editor_absoluteX="254dp"
+        tools:layout_editor_absoluteY="409dp" />
 
 </android.support.constraint.ConstraintLayout>
