minor style fixes

--- a/app/src/main/res/layout/activity_restaurant_view.xml
+++ b/app/src/main/res/layout/activity_restaurant_view.xml
@@ -26,12 +26,12 @@
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginRight="238dp"
         android:layout_marginBottom="11dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="160dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewAddress"
@@ -42,13 +42,13 @@
     <TextView
         android:id="@+id/textViewAddress"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginRight="238dp"
+        android:layout_height="17dp"
         android:layout_marginBottom="9dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewPhone"
@@ -60,12 +60,12 @@
         android:id="@+id/textViewPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginRight="238dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="160dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
@@ -77,14 +77,13 @@
         android:id="@+id/textViewDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginRight="238dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        app:layout_constraintBottom_toTopOf="@+id/textViewTags"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />
@@ -92,16 +91,16 @@
     <TextView
         android:id="@+id/textViewTags"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginRight="238dp"
-        android:layout_marginBottom="5dp"
+        android:layout_height="16dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        app:layout_constraintBottom_toTopOf="@+id/textViewRatingValue"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
 
@@ -109,15 +108,13 @@
         android:id="@+id/textViewRatingValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginRight="238dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        app:layout_constraintBottom_toTopOf="@+id/ratingBarView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTags" />
@@ -126,17 +123,19 @@
         android:id="@+id/ratingBarView"
         android:layout_width="wrap_content"
         android:layout_height="56dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginLeft="96dp"
-        android:layout_marginTop="77dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="96dp"
+        android:layout_marginLeft="96dp"
         android:layout_marginRight="96dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="20dp"
         android:layout_weight="1"
         android:numStars="5"
         android:rating="2.0"
         android:stepSize="1.0"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewRatingValue" />
 
@@ -144,31 +143,43 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="8dp"
         android:text="Share via:"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="586dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btnRVALocation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ratingBarView" />
 
     <Button
         android:id="@+id/btnShareTwitter"
         android:layout_width="113dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="8dp"
         android:text="Twitter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnShareEmail" />
+        app:layout_constraintEnd_toStartOf="@+id/btnShareFacebook"
+        app:layout_constraintStart_toEndOf="@+id/btnShareEmail"
+        app:layout_constraintTop_toBottomOf="@+id/btnRVALocation" />
 
     <Button
         android:id="@+id/btnShareFacebook"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:text="Facebook"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -189,25 +200,29 @@
         android:id="@+id/btnRVALocation"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:text="Location"
         app:layout_constraintBottom_toTopOf="@+id/btnShareEmail"
+        app:layout_constraintEnd_toStartOf="@+id/btnRVADirections"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnRVADirections"
-        android:layout_width="0dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:text="Directions"
         app:layout_constraintBottom_toTopOf="@+id/btnShareFacebook"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/btnRVALocation" />
 
 
